2005-01-17  Benoît Dejean  <TazForEver@dlfp.org>

	* src/openfiles.c: (friendlier_hostname): Returns "" instead of ":0".

2005-01-17  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.h:
	* src/cellrenderer.h:
	* src/favorites.h:
	* src/infoview.h:
	* src/interface.h:
	* src/load-graph.h:
	* src/memmaps.h:
	* src/openfiles.h:
	* src/prettytable.h:
	* src/procactions.h:
	* src/procdialogs.h:
	* src/procman.h:
	* src/proctable.h:
	* src/util.h: G_GNUC_INTERNAL love.

2005-01-17  Benoît Dejean  <TazForEver@dlfp.org>

	* src/interface.c: Fixed strings. Closes #164208.

2005-01-14  Benoît Dejean  <TazForEver@dlfp.org>

	* src/openfiles.c: (friendlier_hostname), (add_new_files): Prints hostname
	if available.
	
	(create_openfiles_tree): Fixed warning.

2005-01-14  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procdialogs.c: (procdialog_create_hide_dialog): Closes #163959.
	Again :P

2005-01-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/openfiles.c: (create_openfiles_tree): Added comment. Closes #163957.

2005-01-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procdialogs.c: (procdialog_create_hide_dialog):
	* src/proctable.c: (proctable_search_table): Fixed strings.
	Closes #163959.

2005-01-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/openfiles.c: (get_type_name): "internet connection" -> "network connection".

2005-01-12  Martin Ejdestig  <mejde@dtek.chalmers.se>
  
 	* load-graph.c (load_graph_draw): Fixed drawing of graph (was off by a
	few pixels here and there).

	Closes #163745.

2005-01-11  Luca Ferretti  <elle.uca@libero.it>

	* src/favorites.c: (create_tree), (create_blacklist_dialog):
	* src/memmaps.c: (create_single_memmaps_dialog):
	* src/procdialogs.c: (create_proc_field_page),
	(procdialog_create_preferences_dialog):
	* src/proctable.c: (proctable_search_table):
	
	* Use new GtkMessageDialog API and HIG compliant labels for
	search-not-found alert.

	* Fix spacing, labels and shadows in Memory Maps and Hidden Processes
	dialogs
