@@ -16,7 +16,7 @@ LIBGNOME_REQUIRED=2.0.0
 LIBGNOMEUI_REQUIRED=2.0.0
 GCONF_REQUIRED=1.1.5
 LIBWNCK_REQUIRED=2.5.0
-LIBGTOP_REQUIRED=2.9.4
+LIBGTOP_REQUIRED=2.9.5
 GTK_REQUIRED=2.5.0
 GNOME_VFS_REQUIRED=2.6.0
 LIBGNOMESU_REQUIRED=0.9.3
