@@ -1,3 +1,8 @@
+2005-01-22  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* configure.in:
+	* src/openfiles.c: (add_new_files): Updated. Now displays localsock path.
+
 2005-01-17  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/openfiles.c: (friendlier_hostname): Returns "" instead of ":0".
